<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_add_friend"
        android:orderInCategory="100"
        android:title="@string/menu_add_friend"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_add_group"
        android:orderInCategory="100"
        android:title="@string/menu_add_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_add_transaction"
        android:orderInCategory="100"
        android:title="@string/menu_add_transaction"
        app:showAsAction="never" />
    <!--
    <item
        android:id="@+id/menu_action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
        -->
</menu>
